# talk-to-stellar

./: .dockerignore  README.md  README_TWILIO_SEPARATION.md  TWILIO_INTEGRATION_OVERVIEW.txt  TWILIO_QUICK_START.md  TWILIO_STANDALONE_GUIDE.md  docker-compose.dev.yml  docker-compose.yml  init.sh  start-docker.sh  start-local.sh
backend/: .env.example  COMMANDS.md  Dockerfile  TEST_QUICK_REFERENCE.md  TWILIO_SETUP.md  jest.config.js  jest.setup.js  package-lock.json  package.json  render.yaml  setup-twilio.sh  test-webhook.sh  tsconfig.json
backend/docs/: PATH-PAYMENT.md
backend/migrations/: agent.sql  disable_rls.sql
backend/scripts/: seed-users.ts
backend/src/: app.ts
backend/src/agent/: graph.ts  routes.ts  tools.ts  types.ts
backend/src/agent_webhook/: README.md  types.ts
backend/src/config/: supabase.ts
backend/src/migrations/: agent.migration.ts
backend/src/repositories/: agent.repository.ts  wallet.repository.ts
backend/src/services/: stellar.service.ts
backend/src/utils/: logger.ts  migrate.ts
backend/tests/: README.md  agent-ai.test.ts  api-integration.test.ts  e2e.test.ts  onboarding.test.ts  setup.ts  stellar-sdk.test.ts  test-utils.ts  wallet.test.ts
frontend/landing-page/components/: cta-section.tsx
frontend/stellar-chat/: .env.example  Dockerfile  package.json  pnpm-lock.yaml  vercel.json
frontend/stellar-chat/app/: page.tsx
frontend/stellar-chat/components/: chat-sidebar.tsx  (+1 more)
talktostellar-agent/: .env.example  .gitignore  Procfile  QUICK_START.md  README.md  main.py  pyproject.toml  render.yaml
talktostellar-agent/api/: main.py  routes.py
talktostellar-agent/src/talktostellar_agent/: __init__.py  agent.py  config.py  tools.py  types.py
talktostellar-agent/tests/: test_agent.py
twilio-webhook/: .env.example  .gitignore  DEPLOYMENT.md  FIX_SUMMARY.md  README.md  SIGNATURE_TROUBLESHOOTING.md  package-lock.json  package.json  render.yaml  setup.sh  tsconfig.json
twilio-webhook/src/: app.ts  config.ts  server.ts  types.ts
(+19 files in other folders)
